Fixing some spacing on glossary links

--- a/scss/components/_type-styles.scss
+++ b/scss/components/_type-styles.scss
@@ -116,6 +116,7 @@
 }
 
 .t-data-header {
+  display: inline-block;
   font-family: $sans-serif;
   font-weight: bold;
   margin-bottom: 0;
