--- a/scss/modules/_glossary.scss
+++ b/scss/modules/_glossary.scss
@@ -73,7 +73,7 @@
   box-shadow: 0 0 0 4px transparent;
   border-bottom: none;
   cursor: pointer;
-  padding-right: 2rem;
+  padding-right: 1em;
 
   &:focus,
   &:hover {
@@ -85,7 +85,6 @@
 }
 
 .term--p {
-  padding-right: 1.5rem;
   margin-right: .5rem;
   box-shadow: none;
 }
